syntax = "proto3";
option java_package = "sjtu.opennet.textilepb";
option go_package = "pb";

import "google/protobuf/timestamp.proto";
//import "google/protobuf/struct.proto";
//import "message.proto";


// StreamBlock is the meta data of a block
// The descriptin stores the complete file name
message StreamBlock {
    string id       = 1;
    string streamid = 2;
    uint64 index     = 3;
    int32 size     = 4;
    bool isRoot    = 5;
    string description = 6;
}

message StreamBlockList {
    repeated StreamBlock items =1;
}

message StreamMeta {
    string id       = 1;
    int32 nsubstreams = 2;
    int32 bitrate = 3;
    string caption = 4;
    uint64 nblocks = 5;
    string posterid = 6;
    Type type = 7;
    enum Type {
        FILE = 0;
        PICTURE =1;
        VIDEO = 2;
    }
}

message StreamMetaList{
    repeated StreamMeta items = 1;
}

// [deprecated] use streamMeta directly
message Stream {
    string id       = 1;
}

// Copied from hon-textile/pb/protos/model.proto
// In a shadow peer, Notification is used only for statistic sent to other peer.
message Notification {
    string id                      = 1;
    google.protobuf.Timestamp date = 2;
    string actor                   = 3;
    string subject                 = 4;
    string subject_desc            = 5;
    string block                   = 6;
    string target                  = 7;
    Type type                      = 8;
    string body                    = 9;
    bool read                      = 10;

    enum Type {
        INVITE_RECEIVED     = 0;
        ACCOUNT_PEER_JOINED = 1;
        ACCOUNT_PEER_LEFT   = 8;
        PEER_JOINED         = 2;
        PEER_LEFT           = 3;
        MESSAGE_ADDED       = 4;
        FILES_ADDED         = 5;
        COMMENT_ADDED       = 6;
        LIKE_ADDED          = 7;

        ADMIN_ADDED         = 100;
        PEER_REMOVED        = 101;
        VIDEO_ADDED         = 102;
        STREAM_ADDED        = 103;
        SIMPLEFILE_ADDED    = 104;

        STREAM_FILE         = 500;

        RECORD_REPORT       = 501;

    }

    // view info
    User user = 101;
}
message User {
    string address = 1;
    string name    = 2;
    string avatar  = 3;
}